--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 logging.level.app.*=INFO
 redis.hostName=localhost
 redis.port=6379
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
